traces/bug_82.txt
examples++-load/Element_Mixte.cpp:79: error: DEAD_STORE
  The value written to &c3 (type double) is never used.
Showing all 1 steps of the trace


examples++-load/Element_Mixte.cpp:79:6: Write of unused value
77.   	    
78.   	    
79.   	    const R c3=1./3.;
           ^
80.   	    const R2 Pt[] = {R2(0.5,0.5), R2(0,0.5),R2(0.5,0)}; 
81.   	    // for the 3 vertices 6 coef 
